# todo-list

./: .env  Cargo.toml  build_and_run_time.sh  diesel.toml  display_data.py  docker-compose.yml  todo.db
migrations/: 20240529062645_todo_item_table.sql
migrations/2024-06-07-064010_create_todo_items/: down.sql  up.sql
src/: cli.rs  database.rs  lib.rs  main.rs  models.rs  schema.rs  todo.rs
src/cli/: create_item_dialogue.rs  dialogue.rs  dialogue_pieces.rs  update_item_dialogue.rs
src/todo/: todo_item.rs  todo_list.rs
src/todo/todo_item/: created_todo_item.rs  local_todo_item.rs  queried_todo_item.rs
