[package]
name = "todo-list"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
color-eyre = "0.6.3"
comfy-table = "7.1.1"
console = "0.15.8"
dialoguer = { version = "0.11", features = ["fuzzy-select"] }
dotenv = "0.15.0"
indicatif = "0.17.8"
regex = "1.10.4"
sqlx = { version = "0.7.4", features = [
    "postgres",
    "runtime-tokio-native-tls",
    "uuid",
    "time",
] }
time = "0.3.36"
tokio = { version = "1.37.0", features = ["full"] }
uuid = { version = "1.8.0", features = ["v4"] }
