[package]
name = "todo-list"
version = "0.1.0"
edition = "2021"
default-run = "todo-list"

[workspace]
members = [
    ""
]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
color-eyre = "0.6.3"
comfy-table = "7.1.1"
console = "0.15.8"
dialoguer = { version = "0.11", features = ["fuzzy-select"] }
dotenvy = "0.15.7"
indicatif = "0.17.8"
regex = "1.10.4"
tokio = { version = "1.37.0", features = ["full"] }
uuid = { version = "1.8.0", features = ["v4"] }
diesel = { version = "2.2.0", features = ["postgres", "uuid", "chrono", "r2d2"] }
chrono = "0.4.38"
rayon = "1.10.0"
rand = "0.8.5"
lazy_static = "1.4.0"
r2d2 = "0.8.10"
